--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -487,6 +487,8 @@
  ENG_Support_Nigerian_Christ_desc:0 "Nigeria stands divided, its soul torn between Islamists and Christians. In this crucible of faith, supporting our Christian brethren becomes a moral imperative, ensuring stability and maintaining the Empire’s influence."
  ENG_Dominion_Investment:0 "Dominion Investment"
 USA_british_request_loans:0 "Britain has Requested American Loans"
+ENG_apply_for_american_loans:0 "Apply for American Loans"
+ENG_apply_for_american_loans_desc:0 "The British economy unfortunately cannot realisticly sustain its self without completly cannibalizing itself or taking on so much debt that we will have no real way of ever paying it back. We will have to look to the sleeping giant of America, a financial giant that we can loan us enough money to pay for the war."
 ENG_sell_american_assets:0 "Sell American Assets"
 ENG_sell_american_assets_desc:0 "It's became obvious that The Great War is not going to end any time soon. With the failure of a quick victory for any side, the financial burden of the war is starting to grow, and we must consider our oppositions for quick cash. We have many British owned assets in America, and we should sell them to finance the war."
  ENG_Dominion_Investment_desc:0 "The Dominions of our Great Empire, extensions of our imperial might, deserve our unwavering support and investment. Through strategic infusion of resources, we ensure their prosperity and, by extension, the prosperity of the Empire."
