--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8345,6 +8345,21 @@ USA_purchase_greenland_decision_desc:0 "To expand our influence into the North A
  USA_legitimate_business_in_honduras:0 "Legitimate Business in Honduras"
  USA_legitimate_business_in_dominica:0 "Legitimate Business in Dominica"
  USA_pull_out_of_dominica:0 "Pull out of Dominica"
+
+ ### Entente Loans
+ USA_assistance_to_entente:0 "Assistance to the Entente"
+ USA_assistance_to_entente_desc:0 ""
+ USA_fufill_loans_to_britain:0 "Fufill Loans to the British"
+ USA_fufill_loans_to_britain_desc:0 ""
+
+ ENG_the_unsustainable_war:0 "The Unsustainable War"
+ ENG_the_unsustainable_war_desc:0 ""
+ ENG_apply_for_american_loans:0 "Apply for American Loans"
+ ENG_apply_for_american_loans_desc:0 ""
+  #Country Flags for Entente Loans
+  USA_american_loans_to_uk:0 "American Loans to the British"
+  USA_failed_loans_to_uk:0 "Anglo-American Loans Fell Through"
+
  MEX_revolution_1910_mission:0 "Mexican Revolution"
  MEX_revolution_1910_mission_desc:0 "The date of the uprising marked by Francisco I. Madero is coming to a close, we shall be ready for it"
  MEX_revolution_category:0 "The Impending Revolt"
