--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6928,6 +6928,14 @@ ww1_USA.115.b:0 "Absolutely Not!"
   USA_american_neutrality:0 "American "Neutrality""
   USA_american_neutrality_true:0 "American Neutrality"
   USA_pullout_desc:0 "We will no longer be punished if §YDominica§! falls under 25% stability"
+  #Entente Loans
+  ww1_USA.134.t:0 "The USA Agrees to Lift the Ban"
+  ww1_USA.134.d:0 ""
+  ww1_USA.134.a:0 "A Major Boon for the War Effort"
+  ww1_USA.135.t:0 "The USA Refuses to Lift the Ban"
+  ww1_USA.135.d:0 ""
+  ww1_USA.135.a:0 "Drastic Economic Measures Become Needed"
+
  #JAPAN
  ww1_japan.100.t:0 "Japan-Korea Annexation Treaty"
  ww1_japan.100.d:0 "The Korean Empire, a protectorate of [JAP.GetNameDef] since the Japanese victories on the Sino-Japanese War and the Russo-Japanese War, has just signed a treaty with the [JAP.GetAdjective] government that resulted in full annexation. Though [RUS.GetNameDef] and [USA.GetNameDef] are complaining about this measure, no official actions have been taken against them yet. It seems that Korea, a country with a long legacy, will go out with nothing more than a whimper."
