--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6929,12 +6929,16 @@ ww1_USA.115.b:0 "Absolutely Not!"
   USA_american_neutrality_true:0 "American Neutrality"
   USA_pullout_desc:0 "We will no longer be punished if §YDominica§! falls under 25% stability"
   #Entente Loans
-  ww1_USA.134.t:0 "The USA Agrees to Lift the Ban"
-  ww1_USA.134.d:0 ""
-  ww1_USA.134.a:0 "A Major Boon for the War Effort"
+ ww1_USA.133.t:0 "America Fails to Deliver Loans"
+ ww1_USA.133.d:0 "Despite promising to unban loans to nations at war, America has still not lifted the ban offically, 3 months later. We cannot affoard to wait for America to offically remove the ban, and thus we must look towards other measures."
+ ww1_USA.133.a:0 "We don't have all year!"
+  ww1_USA.134.t:0 "America Agrees to Lift the Ban"
+  ww1_USA.134.d:0 "Our appeal to the Americans has ended in success today as the Americans have agreed to unban loans to foreign powers at war in the next few weeks. This will allow us to get some much needed cash to continue the war effort, which continues to be a strain on the British economy."
+loans_soon.tt:0 "§YThe United States§! take the focus §YLoans to the Entente§! in the coming weeks, which will allow us to offically take much needed loans"
+  ww1_USA.134.a:0 "Great news!"
   ww1_USA.135.t:0 "The USA Refuses to Lift the Ban"
-  ww1_USA.135.d:0 ""
-  ww1_USA.135.a:0 "Drastic Economic Measures Become Needed"
+  ww1_USA.135.d:0 "Our attempts to convince the United States to lift the ban on loans has failed. America claimed that unbanning foreign loans to nations at war would be a risk to their neutrality, and thus we will have to look towards other options"
+  ww1_USA.135.a:0 "Drastic Economic Measures Will be Needed"
 
  #JAPAN
  ww1_japan.100.t:0 "Japan-Korea Annexation Treaty"
