--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -486,13 +486,20 @@
  ENG_Support_Nigerian_Christ:0 "Support Nigerian Christians"
  ENG_Support_Nigerian_Christ_desc:0 "Nigeria stands divided, its soul torn between Islamists and Christians. In this crucible of faith, supporting our Christian brethren becomes a moral imperative, ensuring stability and maintaining the Empire’s influence."
  ENG_Dominion_Investment:0 "Dominion Investment"
+ ENG_sell_it_all:0 "Sell it All"
+ ENG_sell_it_all_desc:0 "We still have a decent amount of foreign assets and domestic stockpiles of gold that we can sell. These assets and gold won't be worth anything to us if the Kaiser controls London. Although drastic, we must sell off most of our gold and all of our foreign assets to ensure our survival."
+ENG_sell_domestic_assets:0 "Nationalize And Sell Domestic Assets"
 USA_british_request_loans:0 "Britain has Requested American Loans"
+ENG_intensify_rationing:0 "Intensify Rationing"
+ENG_austerity_measures:0 "Austerity Measures"
 ENG_apply_for_american_loans:0 "Apply for American Loans"
 ENG_apply_for_american_loans_desc:0 "The British economy unfortunately cannot realisticly sustain its self without completly cannibalizing itself or taking on so much debt that we will have no real way of ever paying it back. We will have to look to the sleeping giant of America, a financial giant that we can loan us enough money to pay for the war."
  ENG_sell_gold_reserves:0 "Sell Gold Reserves"
 ENG_prioritize_economic_independence:0 "Prioritize Economic Independence"
 ENG_prioritize_economic_independence_desc:0 "Despite the hardships we may face, we must prioritize economic independence above all else. Taking excessive loans from foreign powers like America would only harm us in the long term, to solve a short time issue. Let's look at our options to sustain ourselves."
- ENG_sell_gold_reserves_desc:0 "It's became obvious that The Great War is not going to end any time soon. With the failure of a quick victory for any side, the financial burden of the war is starting to grow, and we must consider our options for quick cash. Desperate times call for desperate measures, and thus we must suspend the gold standard and sell off some of our gold reserves."
+ ENG_sell_gold_reserves_desc:0 "It's became obvious that The Great War is not going to end any time soon. With the failure of a quick victory for any side, the financial burden of the war is starting to grow, and we must consider our options for quick cash. Although not ideal, we must suspend the gold standard and sell off some of our gold reserves for our survival."
+ENG_desperate_times_call_for_desperate_measures:0 "Desperate Times Call For Desperate Measures"
+ENG_desperate_times_call_for_desperate_measures_desc:0 "Our economy is still at risk of collapse. We must extend our measures to some of the more radical tools we have at our disposal. We must nationalize and sell some assets in our country."
 ENG_sell_american_assets:0 "Sell American Assets"
 ENG_sell_american_assets_desc:0 "It's became obvious that The Great War is not going to end any time soon. With the failure of a quick victory for any side, the financial burden of the war is starting to grow, and we must consider our options for quick cash. We have many British owned assets in America, and we should sell them to finance the war."
  ENG_Dominion_Investment_desc:0 "The Dominions of our Great Empire, extensions of our imperial might, deserve our unwavering support and investment. Through strategic infusion of resources, we ensure their prosperity and, by extension, the prosperity of the Empire."
