--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8353,9 +8353,8 @@ USA_purchase_greenland_decision_desc:0 "To expand our influence into the North A
  USA_fufill_loans_to_britain_desc:0 ""
 
  ENG_the_unsustainable_war:0 "The Unsustainable War"
- ENG_the_unsustainable_war_desc:0 ""
+ ENG_the_unsustainable_war_desc:0 "The United Kingdom has taken on the burden of financing the war for much of the entente, and it's having its cost on the British economy. The current costs of war are unsustainable, and we must see a quick end to the war. Until then, we will have to take additional measures for our economic survival. "
  ENG_apply_for_american_loans:0 "Apply for American Loans"
- ENG_apply_for_american_loans_desc:0 ""
   #Country Flags for Entente Loans
   USA_american_loans_to_uk:0 "American Loans to the British"
   USA_failed_loans_to_uk:0 "Anglo-American Loans Fell Through"
