--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1651,6 +1651,10 @@ CHL_the_five_points_of_the_nationalist_program:0 "End The Status Quo"
 CHL_the_five_points_of_the_nationalist_program_desc:0 ""
 CHL_el_ideal_modernizador:0 "El Ideal Modernizador"
 CHL_el_ideal_modernizador_desc:0 "We are now about to become an idustrialized country!"
+CHL_saltpeter_auxlio:0 "The Saltpeter Help"
+CHL_saltpeter_auxlio_desc:0 ""
+CHL_laws_against_fraud:0 "Laws Against Electoral Fraud"
+CHL_laws_against_fraud_desc:0 ""
 CHL_islon_toledo:0 "Islon-Toledo Railway"
 CHL_islon_toledo_desc:0 ""
 CHL_territorial_integration_project:0 "Territorial Integration Project"
@@ -2048,8 +2052,8 @@ CHL_end_the_parliamentary_system:0 "End The Parliamentary System"
 CHL_end_the_parliamentary_system_desc:0 ""
 CHL_educational_reform:0 "Educational Reform"
 CHL_educational_reform_desc:0 ""
-CHl_a_new_education_philosophy:0 "A New Education Philosophy"
-CHl_a_new_education_philosophy_desc:0 ""
+CHL_a_new_education_philosophy:0 "A New Education Philosophy"
+CHL_a_new_education_philosophy_desc:0 ""
 CHL_liceos_tecnicos:0 "Technical High Schools"
 CHL_liceos_tecnicos_desc:0 ""
 CHL_economic_teachings:0 "Economic Teachings"
