my legs physically hurt set shit up for shall

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -492,6 +492,9 @@ ENG_sell_domestic_assets:0 "Nationalize And Sell Domestic Assets"
 USA_british_request_loans:0 "Britain has Requested American Loans"
 ENG_intensify_rationing:0 "Intensify Rationing"
 ENG_austerity_measures:0 "Austerity Measures"
+USA_loans_to_the_entente:0 "Revoke Ban On Loans For Nations At War"
+USA_increase_food_trade:0 "Increase Food Trade"
+USA_loans_to_the_entente_desc:0 "Currently, there is a ban on American banks lending loans to any nations at war. With our economy suffering as of late, lifting this ban would be an easy way to revive the economy while also supporting the nation at war with one of our geopolitical enemies."
 ENG_apply_for_american_loans:0 "Apply for American Loans"
 ENG_apply_for_american_loans_desc:0 "The British economy unfortunately cannot realisticly sustain its self without completly cannibalizing itself or taking on so much debt that we will have no real way of ever paying it back. We will have to look to the sleeping giant of America, a financial giant that we can loan us enough money to pay for the war."
 ENG_sell_gold_reserves:0 "Sell Gold Reserves"
