Bosilegrad and Strumica

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13036,6 +13036,9 @@ gre_we_shall_not_perish:0 "We Shall Not Perish"
  ww1_firstbalkan.117.d:0 "To no one's surprise, [TUR.GetNameDef] gave up the European territories in the Balkans when they received the ultimatum from the Balkan Alliance, thus establishing a buffer zone as Autonomous Macedonia under multinational administration.\nBut this does not mean that the Balkans are now finally stabilised and at peace; rather, they could become an unguarded powder keg that could drag the whole of Europe into a large-scale war in the coming days."
  ww1_firstbalkan.117.a:0 "Okay now what?"
  ww1_firstbalkan.117.b:0 "Suicidial."
+ ww1_firstbalkan.118.t:0 "Race for Macedonia?"
+ ww1_firstbalkan.118.d:0 "Now we are at war with the Turks, and our troops may move into Macedonia as a strategic move. If we take the region from the Turks, it will be under our control to stabilise the region."
+ ww1_firstbalkan.118.a:0 "Of course."
 
  ww1_secondbalkan.1.t:0 "Treaty with [FROM.GetName]"
  ww1_secondbalkan.1.d:0 "Our former ally offers us a defensive pact against the growing power of Bulgaria. What do we say to it?"
