harrisburg and williamsport

--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -592,6 +592,8 @@
  VICTORY_POINTS_12401:0 "Shreveport"
  VICTORY_POINTS_6803:0 "McAlester"
  VICTORY_POINTS_1618:0 "Muskogee"
+ VICTORY_POINTS_11785:0 "Harrisburg"
+ VICTORY_POINTS_11817:0 "Williamsport"
 
  PETROGRAD_PROV:0 "Petrograd"
  LENINGRAD_PROV:0 "Leningrad"
