--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -64,6 +64,10 @@
 
  RUS_finnish_autonomy_law_sc: "Law of all-Empire legislation procedures"
  RUS_finnish_autonomy_law_sd: "Law of all-Empire legislation procedures"
+ RUS_law_on_finnish_autonomy_passed_in_sc: "Law of all-Empire legislation procedures was passed in the State Council"
+ RUS_law_of_equality_sd: "Law of Equality of Russians in Finland"
+ RUS_law_of_equality_sc: "Law of Equality of Russians in Finland"
+ RUS_law_of_equality_passed_in_sc: "Law of Equality of Russians in Finland was passed in the State Council"
  RUS_law_on_peasant_land_ownership_sc: "Law on Peasant Land Ownership"
  RUS_law_on_peasant_land_ownership_sd: "Law on Peasant Land Ownership"
  RUS_law_on_land_management_sc: "Law on Land Management"
@@ -265,6 +269,11 @@
  krivoshein_premiership_scripted_trigger_tt: "§Y[RUS_alexander_krivoshein.GetName]§! is §YPrime Minister§!"
  stolypin_premiership_scripted_trigger_tt: "§Y[RUS_pyotr_stolypin.GetName]§! is §YPrime Minister§!"
  reformist_minister_of_finance_scripted_trigger_tt: "§YMinister of Finance§! is a §CReformist§!"
+ has_agrarian_question_scripted_trigger_tt: "Has national spirit §YAgrarian Question§!"
+ has_labour_question_scripted_trigger_tt: "Has national spirit §YLabour Question§!"
+ has_illiteracy_scripted_trigger_tt: "Has national spirit related to §YIlliteracy§!"
+ has_authoritarian_zemstvo_scripted_trigger_tt: "Has national spirit §YAuthoritarian Zemstvo§!"
+ not_has_authoritarian_zemstvo_scripted_trigger_tt: "Does not have national spirit §YAuthoritarian Zemstvo§!"
 
  # National Focuses
  RUS_stolypins_reforms: "Stolypin's Reforms"
@@ -533,6 +542,7 @@
  far_right_policeman: "Far-Right Policeman"
  bureaucrat_squared: "Bureaucrat Squared"
  petty_tyrant: "Petty Tyrant"
+ pogromist: "Pogromist"
  
 
  #Characters
@@ -540,6 +550,7 @@
  RUS_sergei_kryzhanovsky: "Sergei Kryzhanovsky"
  RUS_pyotr_bark: "Pyotr Bark"
  RUS_pyotr_durnovo: "Pyotr Durnovo"
+ RUS_nikolai_markov: "Nikolai Markov"
  RUS_aleksandr_makarov: "Aleksandr Makarov"
  RUS_nikolay_maklakov: "Nikolai Maklakov"
  RUS_aleksandr_guchkov: "Aleksandr Guchkov"
@@ -554,5 +565,5 @@
  RUS_communism_party_SR_long: "Partiya Sotsialistov-Revolyutsionerov"
  RUS_democratic_party: "KDP"
  RUS_democratic_party_long: "Konstitutsionno-Demokraticheskaya Partiya"
- RUS_fascism_party: "Pravyye"
- RUS_fascism_party_long: "Gruppa Pravykh"
+ RUS_fascism_party: "SRN"
+ RUS_fascism_party_long: "Soyuz Russkogo Naroda"
