Some aids stuff

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -170,6 +170,7 @@
  RUS_increased_funding_for_education_reform: "Increased funding for the Education Reform"
  RUS_increased_funding_for_education_reform_tt: "§GTemporarily improves§! the effectiveness of our §YEducation Reform decisions§!."
  RUS_police_reform_decision: "Draft Police Reform"
+ RUS_complete_the_police_reform: "Emperor's Edict on Reformation of Police in the Empire"
  RUS_add_police_reform_progress_tt: "Modifies §YPolice Reform§! progress by [?RUS_add_police_reform_progress_var|.1%%Y=]."
  RUS_closer_to_finishing_police_reform_tt: "§GWe will be closer to fully completing the Police Reform§!."
  RUS_further_from_finishing_police_reform_tt: "§RWe will be further from fully completing the Police Reform§!."
@@ -181,6 +182,10 @@
  RUS_insurance_funds_created: "Insurance Funds Created"
  RUS_expansion_of_insurance_funds: "Expansion of Insurance Funds"
  RUS_insurance_funds_expanded: "Insurance Funds Expanded"
+ RUS_edict_on_income_tax: "Emperor's Edict on Income Tax"
+ RUS_edict_on_progressive_tax: "Emperor's Edict on Progressive Taxation"
+ RUS_edict_on_grand_fleet_programme: "Emperor's Edict on Grand Fleet Programme"
+ RUS_edict_on_increased_conscription: "Emperor's Edict on changing the Charter on military service"
  RUS_famine_relief: "Famine Relief"
  RUS_currently_building_a_railway: "Currently building a railway"
  RUS_olonets_railway: "Build Olonets Railway"
@@ -274,6 +279,8 @@
  has_illiteracy_scripted_trigger_tt: "Has national spirit related to §YIlliteracy§!"
  has_authoritarian_zemstvo_scripted_trigger_tt: "Has national spirit §YAuthoritarian Zemstvo§!"
  not_has_authoritarian_zemstvo_scripted_trigger_tt: "Does not have national spirit §YAuthoritarian Zemstvo§!"
+ duma_is_active_scripted_trigger_tt: "Not: The parliament has been dismissed"
+ duma_is_not_active_scripted_trigger_tt: "The parliament has been dismissed"
 
  # National Focuses
  RUS_stolypins_reforms: "Stolypin's Reforms"
