--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8874,7 +8874,10 @@ FRA_MOR_create_colonial_division:0 "Create a Division with §Y4 Infantry Batalli
  SAU_rally_ikhwan: "Rally Ikhwan"
  SAU_Raid_Mesopotamia: "Raid Mesopotamia"
  SAU_Raid_Jordan: "Raid Jordan"
+ SAU_OMA_YEM_trade_tt: "§YSouthern Arabia Trade§!"
+ SAU_khurma_negotiations: "Khurma Negotiations"
  SAU_trade_cav_tt: "The §YCaravan§! will transport §YGoods§! £rifle_texticon per connected trading post not blockaded on this route."
+ SAU_trade_caravans_tt: "The §YCaravan§! will transport §YGoods§! £rifle_texticon per connected trading post not blockaded on this route."
  SAU_Caravan_Trade: "Arabian Trade Network"
  SAU_Caravan_Trade_desc: "Although Nejd lacks significant economic resources, with arable land comprising less than 5% of its total territory, it holds a crucial position in the Arabian trade network. Its oases and towns supply essentials for journeys to Ha'il and Al Jawf, while cities and towns along the Hejazi and Arabian Gulf coasts facilitate traffic to destinations such as Oman, Iraq, Syria, and Egypt.\n\nThe strained relations between Saudi Arabia and the Ottoman Empire have significantly disrupted these vital routes, which serve as the lifeline of Nejdi society. The only state that permits entry for Saudi caravans is Britain.\n\nArab nationalist secret societies eagerly engage in smuggling activities and readily participate in black market arms deals.\n\n§gRewards will be based on distance travelled or on modifiers unlocked through the focus tree.\n\n§YNetwork Routes§!:\n§8Nejd§! - §8Ha'il§! - §8Hafar Al Battin§! - §8Basra§!\n§8Nejd§! - §8Ihsa'a§! - §8Abu Dhabi§! - §8Oman§!\n§8Nejd§! - §8Hejaz§! - §8Amman§! - §8Egypt§!\n§8Nejd§! - §8Najran§! - §8Yemen§!\n§8Nejd§! - §8Ha'il§! - §8Hafar Al Battin§! - §8Kuwait§!\n§8Nejd§! - §8Ha'il§! - §8Al Jawf§! - §8Syria§!"
  SAU_Riadyh: "Riadyh"
