--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4267,8 +4267,8 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.95.t: "Failed Attempt for Ottoman-Bulgarian Alliance"
  ottoman.95.d: "Bulgarian government has refused our offer to sign a mutual assistance and protection alliance pact. Perhaps they want to assure their neutrality, or perhaps they have their eyes on our territories. No matter which, we should be prepared for the worst."
  ottoman.95.a: "Their loss."
- ottoman.96.title: "Saudi Conquest of al-Hasa"
- ottoman.96.desc: "The Saudi forces of ibn Saud with support from the Ikhwan militia captured the Oasis of al-Hasa."
+ ottoman.96.title: "Saudi Conquest of Al-Ihsa'a"
+ ottoman.96.desc: "The Saudi forces of ibn Saud with support from the Ikhwan militia captured the Oasis of Al-Ihsa'a."
  ottoman.96.a: "We should have put more garrisons there.."
  ottoman.97.t: "Party Elections"
  ottoman.97.d: "After finally completing reforms and modernizing our old empire, Şevket Paşa has decided to end his political career here. After a successful career as a grand vizier, implementing democracy and making our people finally get their long-desired freedom, he decided that his mandate is over and will turn the position to whoever wins the elections. Before choosing a leader, people first has to choose which party will represent them. Their first choice is Hürriyet ve İtilâf Fırkası, the staunch opposition against the oppressive rule of İTF; talking of it, İttilaf ve Terakki Fırkası has branded itself under democratic principles and is ready to participate in elections. What will the people's choice be?"
@@ -13106,7 +13106,7 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_qatar.1.d: "Our beloved Emir and the Founder of the State of Qatar, Jassim bin Mohammed bin Thani, passed away on Thursday evening of 13 Shaban 1331 AH. Gaining power after victory over the Bahrain in the war of independence, Sheikh Jassim managed to gain full recognition from the Ottoman Empire as a ruler of the independent Qatar. His son, Abdullah bin Jassim bin Mohammed Al Thani, will succeed him as the Emir of Qatar."
  ww1_qatar.1.a: "Memento mori."
  ww1_qatar.2.t: "Qatari Suzerainty Abolished"
- ww1_qatar.2.d: "The Ottoman Empire embarked on the conquest of the Arabian coast back in the late 19th century, with Al-Hasa as a pivotal point, and had Qatar under Ottoman rule. However, following the defeat in the Battle of Al Wajbah in 1893, we have been unable to exercise effective control over Qatar, left only with ineffective sovereignty. Moreover, given our recent loss of Al-Hasa, we find ourselves in a position where we must relinquish Qatar."
+ ww1_qatar.2.d: "The Ottoman Empire embarked on the conquest of the Arabian coast back in the late 19th century, with Al-Ihsa'a as a pivotal point, and had Qatar under Ottoman rule. However, following the defeat in the Battle of Al Wajbah in 1893, we have been unable to exercise effective control over Qatar, left only with ineffective sovereignty. Moreover, given our recent loss of Al-Ihsa'a, we find ourselves in a position where we must relinquish Qatar."
  ww1_qatar.2.a: "Fine..."
 
  # BRUNEI
@@ -13220,30 +13220,30 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_nejd.3.d: "The intense negotiations and conflicts surrounding the Uqair Protocol have concluded, resulting in a status quo. The Kuwaiti resolute stance and effective defense against the Saudi attacks have successfully fended off Abdulaziz Al Saud's ambitions to annex Wafra and Hafar Al Batin."
  ww1_nejd.4.d: "Since either side is not available to go war, it ceases to happen."
  ww1_nejd.4.a: "Unexpected."
- ww1_nejd.5.t: "Decisions over Al-Hasa"
- ww1_nejd.5.d: "The Saudis have taken over our province in Al-Hasa, and that is unacceptable. What should we do?"
+ ww1_nejd.5.t: "Decisions over Al-Ihsa'a"
+ ww1_nejd.5.d: "The Saudis have taken over our province in Al-Ihsa'a, and that is unacceptable. What should we do?"
  ww1_nejd.5.a: "Demand their acceptance of the Ottoman suzerainty."
  ww1_nejd.5.b: "They can have it."
- ottoman_gave_up_alhasa: "The Ottomans have abandoned the province of Al-Hasa"
+ ottoman_gave_up_alhasa: "The Ottomans have abandoned the province of Al-Ihsa'a"
  ww1_nejd.6.t: "The Ottomans Demand Submission"
- ww1_nejd.6.d: "Because of the annexation of Al-Hasa, they are infuriated and want to make sure that Al-Hasa is their province and that we restore the Ottoman garrison there. They also demand that we submit to them by recognising their suzerainty over the emirate."
+ ww1_nejd.6.d: "Because of the annexation of Al-Ihsa'a, they are infuriated and want to make sure that Al-Ihsa'a is their province and that we restore the Ottoman garrison there. They also demand that we submit to them by recognising their suzerainty over the emirate."
  ww1_nejd.6.a: "Ask British for protection."
  ww1_nejd.6.b: "Alright..."
  ww1_nejd.6.c: "Damn you, greedy Turks!"
- ww1_nejd.7.t: "The Saudis Request Help for Al-Hasa"
- ww1_nejd.7.d: "The Saudis ask us to help them against the Ottomans, who are furious at the Saudis' annexation of Al-Hasa, the provinces near the Trucial States under British protection. And we has already recognized Ottoman sovereignty over Al-Hasa in a recent treaty. In the event of war, this could threaten British concessions in the Gulf, but even if we recognised Ottoman suzerainty over the Saudis, they would be forced not to allow foreign investors like us, the British. Saud says he agrees to set up a British protectorate over Najd if we want it."
- ww1_nejd.7.a: "Priortize British interest first."
+ ww1_nejd.7.t: "The Saudis Request Help for Al-Ihsa'a"
+ ww1_nejd.7.d: "The Saudis ask us to help them against the Ottomans, who are furious at the Saudis' annexation of Al-Ihsa'a, the provinces near the Trucial States under British protection. We had already recognized Ottoman sovereignty over Al-Ihsa'a in a recent treaty. In the event of war, this could threaten British concessions in the Gulf, but even if we recognised Ottoman suzerainty over the Saudis, they would be forced not to allow foreign investors like us, the British. Saud says he agrees to set up a British protectorate over Najd if we want it."
+ ww1_nejd.7.a: "Prioritize British interest first."
  ww1_nejd.7.b: "Do not care."
  ww1_nejd.7.c: "Another colony for victory."
  ww1_nejd.8.t: "Britain Asks for No War in the Gulf"
- ww1_nejd.8.d: "Asked to mediate between the Ottomans and the Saudis on the al-Hasa issue, Britain says that they has already recognized the Ottoman sovereignty over Al-Hasa, so they cannot recognize Saudis occupancy, but has sent a polite request to refrain from war in the Gulf in thinking of Al-hasa is near their protectorate of the Trucial States."
+ ww1_nejd.8.d: "Asked to mediate between the Ottomans and the Saudis on the Al-Ihsa'a issue, Britain says that they has already recognized the Ottoman sovereignty over Al-Ihsa'a, so they cannot recognize Saudis occupancy, but has sent a polite request to refrain from war in the Gulf in thinking of Al-Ihsa'a is near their protectorate of the Trucial States."
  ww1_nejd.8.a: "Get in direct contact with Saud and adjust the demands."
  ww1_nejd.8.b: "Aw."
  ww1_nejd.8.tt: "§YOn the mission timer fire out, instead of war, Saud will recognise Ottoman suzerainty.§!"
  ww1_nejd.9.t: "Britain Ignores the Saudis"
- ww1_nejd.9.d: "Asked to mediate between the Ottomans and the Saudis on the al-Hasa issue, Britain says that they has already recognized the Ottoman sovereignty over Al-Hasa, so they cannot recognize Saudis occupancy, and says they won't interfere over the Ottmans suzerainty in Arabia unless they expand it to the coasts."
+ ww1_nejd.9.d: "Asked to mediate between the Ottomans and the Saudis on the Al-Ihsa'a issue, Britain says that they had already recognized the Ottoman sovereignty over Al-Ihsa'a, so they cannot recognize Saudis occupancy, and says they won't interfere over the Ottmans suzerainty in Arabia unless they expand it to the coasts."
  ww1_nejd.10.t: "Britain Protects the Saudis"
- ww1_nejd.10.d: "Asked to mediate between the Ottomans and the Saudis on the al-Hasa issue, Britain says that they will protect the Saudis from any Ottoman aggression. The British troops had already entered ar-Riyadh to set up the protectorate."
+ ww1_nejd.10.d: "Asked to mediate between the Ottomans and the Saudis on the Al-Ihsa'a issue, Britain says that they will protect the Saudis from any Ottoman aggression. The British troops has already entered Al-Riyadh to set up the protectorate."
  ww1_nejd.10.a: "Phew."
  ww1_nejd.10.b: "Damn it."
  ww1_nejd.11.t: "Question on the Ottoman Suzerainty"
