--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -3007,6 +3007,7 @@ FRA_colonial_conscription:0 "Colonial Conscription"
  rub_al_khali:0 "The Empty Quarter"
  rub_al_khali_desc:0 "§RNOT PLAYABLE§!\n\nThe Rub Al-Khali Desert is the second largest sand desert. No political entity has managed to establish administrative control over the region. Only sparse Bedouin tribes wandering the desert live here."\
  SAU_bedouin_logstics_idea: "Bedoin Logistics"
+ SAU_bedouin_tactics_idea: "Bedoin Tactics"
  SAU_Horsemanship: "Horsemanship"
  SAU_modern_taxes: "Modern Taxation"
  SAU_modern_taxes2: "Accounting Division"
