--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -919,7 +919,7 @@
  EGY_fuad_i_muhammad_ali:0 "Fuad I"
  EGY_arthur_lyndenbell:0 "Arthur Lynden-Bell"
  EGY_saad_zahloul:0 "Sa'd Zaghloul Pasha"
- EGY_hosni_al_arabi:0 "Hosni al-Arabi"
+ EGY_hosni_al_arabi:0 "Mahmood Husni Al Urabi"
 
  # UNITED KINGDOM
  ENG_walter_long:0 "Walter Long"
