Fascist interwar content

--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -331,6 +331,8 @@
  christian_republicain:0 "Christian Republicain"
  politized_admiral:0 "Politized Admiral"
  antisemitic_nationalist:0 "Antisemitic Nationalist"
+ trench_veteran:0 "Trench Veteran"
+ national_socialist_militarist:0 "Militarist Nationalist"
  educational_reformer:0 "Educational Reformer"
  anarchist_author:0 "Anarchist Author"
  industrial_reformer:0 "Industrial Reformer"
