--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1229,6 +1229,9 @@
  FRA_leon_daudet:0 "Léon Daudet"
  FRA_antoine_schwerer:0 "Antoine Schwerer"
  FRA_maurice_barres:0 "Maurice Barrès"
+ FRA_francois_de_la_rocque:0 "François de La Rocque"
+ FRA_pierre_taittinger:0 "Pierre Taittinger"
+ FRA_jacques_arthuys:0 "Jacques Arthuys"
  FRA_marc_sangnier:0 "Marc Sangnier"
  FRA_nicolas_saclois:0 "Nicolas Saclois"
  FRA_matthieu_abriot:0 "Matthieu Abriot"
