--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -729,7 +729,7 @@
  STATE_728:0 "Kouang-Tchéou-Wan" #廣州灣
  STATE_729:0 "Macau"
  STATE_730:0 "St Pierre and Miquelon"
- STATE_731:0 "Central Macedonia"
+ STATE_731:0 "Florina"
  STATE_732:0 "Fergana"
  STATE_733:0 "Andaman"
  STATE_734:0 "Nendo"
