--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1906,6 +1906,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_utilize_anatolian_grain_bonus:0 "This decision can be taken since national focus §YForming National Supply Connections§! been completed (can be selected [?TUR_utilize_anatolian_grain_bonus|00Y] more times)"
  TUR_abandon_war_agriculture:0 "Abandon War Agriculture"
  TUR_abandon_war_agriculture_desc:0 "Introduced during the war, war agriculture was supposed to ease the strained food resouces. Yet the success of the war has been rather negligible. Under these circumstances, it's best to get rid of the law entirely."
+ TUR_lift_war_tax:0 "Lift War Tax"
+ TUR_lift_war_tax_desc:0 "War Tax has allowed us to benefit greatly by excusing the state of war in order to get more taxes from the mostly non-Muslim population. Yet due to the unpopularity of the law, its time for us to lift it."
  TUR_harbiye_nezareti_decision_category:0 "Harbiye Nezâreti"
  TUR_modernization_of_the_high_command:0 "Modernization of the High Command"
  TUR_modernization_of_the_high_command_desc:0 "Even though our equipments are up to european standards, we simply lack commanders capable of giving efficient orders to use them. We have to train our officers up to European standards."
@@ -2690,12 +2692,14 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_army_civilian_struggle:0 "Army-Civilian Struggle"
  TUR_army_civilian_struggle_army:0 "Army"
  TUR_army_civilian_struggle_civilian:0 "Civilian"
+ TUR_third_faction_civilian_struggle_third_faction:0 "Third Faction"
  TUR_army_civilian_struggle_army_balanced:0 "Balanced Influence"
- TUR_army_civilian_struggle_army_full_control:0 "Full Army Influence"
  TUR_army_civilian_struggle_army_high_control:0 "High Army Influence"
  TUR_army_civilian_struggle_army_medium_control:0 "Medium Army Influence"
  TUR_army_civilian_struggle_army_low_control:0 "Low Army Influence"
- TUR_army_civilian_struggle_civilian_full_control:0 "Full Civilian Influence"
+ TUR_third_faction_civilian_struggle_third_faction_high_control:0 "High Third Faction Influence"
+ TUR_third_faction_civilian_struggle_third_faction_medium_control:0 "Medium Third Faction Influence"
+ TUR_third_faction_civilian_struggle_third_faction_low_control:0 "Low Third Faction Influence"
  TUR_army_civilian_struggle_civilian_high_control:0 "High Civilian Influence"
  TUR_army_civilian_struggle_civilian_medium_control:0 "Medium Civilian Influence"
  TUR_army_civilian_struggle_civilian_low_control:0 "Low Civilian Influence"
