--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4948,9 +4948,17 @@
  has_arab_minority:0 "Has £ww1_flag_ARB  §YArab Minority§! present within the state"
  TUR_healing_the_sick_man_tt:0 "Has national spirit §YSick Man of Europe§!"
  TUR_mobilize_the_civilian_population_tt:0 "Modify §YSecond Constitutional Era§! by\n£boost_popularity_texticon  Daily Proto-Fascism Support: §G+0.05§!\n\n"
- TUR_safeguard_courts_from_mlitary_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_texticon  Stability: §G+5.00§!\n£war_support_modifiericons_texticon  War Support: §R-7.00%§!\n\n"
+ TUR_safeguard_courts_from_mlitary_tt:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §G+3%§!\n£war_support_modifiericons_texticon  War Support: §R-7.00%§!\n\n"
  TUR_consolidate_military_position_tt:0 "Modify §YSecond Constitutional Era§! by\n£war_support_modifiericons_texticon  War Support: §G+5.00%§!\n£planning_max_texticon  Max planning factor: §G+8.0%§!\n£command_power_texticon  Daily Command Power Gain Multiplier: §G+8%§!\n\n"
  TUR_promote_young_officers_tt:0 "Modify §YSecond Constitutional Era§! by\n£planning_speed_texticon  Planning Speed: §G+15.0%§!\n\n"
+ TUR_the_third_front_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_texticon  Stability: §G+5.00%§!\n£stability_popularity_texticon  Party Popularity Stability Modifier: §G+5.00%§!\n\n"
+ TUR_gather_opposition_on_both_fronts_tt:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §G+2%§!\n£ai_acceptance_texticon  Acceptance of Democratic Diplomacy: §G+15§!\n£ai_acceptance_texticon  Acceptance of Authoritarian Diplomacy: §G+15§!\n\n"
+ TUR_loyalty_over_ability_tt:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §R-5%§!\n£stability_texticon  Stability: §G+5.00%§!\n£stability_popularity_texticon  Party Popularity Stability Modifier: §G+20.00%§!\n\n"
+ TUR_appointment_through_capability_tt:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §G+5%§!\n£stability_texticon  Stability: §R-5.00%§!\n£stability_popularity_texticon  Party Popularity Stability Modifier: §R-10.00%§!\n\n"
+ TUR_autonomy_in_administration_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_popularity_texticon  Party Popularity Stability Modifier: §G+10.00%§!\n\nWe'll get several §Yevents§! about the §Yadministration§! of specific §Yvilayets§! within our empire. The decision we chosoe will have impacts on both the §Ystate§! itself, as well as the makeup of our §Yconstitution§!."
+ TUR_promote_effective_governors_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_popularity_texticon  Party Popularity Stability Modifier: §R-10.00%§!\n£conscription_laws_cost_texticon  Conscription Laws Cost: §G-25%§!\n£trade_laws_cost_texticon  Trade Laws Cost: §G-25%§!\n£economy_laws_cost_texticon  Economy Laws Cost: §G-25%§!\n\n"
+ TUR_inner_party_cult_tt:0 "Several §Yadvisors§! would be able to §Yhired§! outside of §YPolitical Advisor§! slots, with each impacting §YSecond Constitutional Era§!."
+ TUR_unity_of_the_party_and_the_state_tt:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §G+5%§!\n£stability_popularity_texticon  Party Popularity Stability Modifier: §G+5.00%§!\n\n"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
