--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -263,12 +263,13 @@
  TUR_national_hero:0 "National Hero"
  TUR_ruthless_revanchist:0 "Ruthless Revanchist"
  TUR_ruthless_revanchist_leader:0 "Empowered Revanchist"
- TUR_butcher:0 "Unforgiving Butcher"
+ TUR_butcher:0 "Kasap Cemâl"
+ TUR_connections_on_all_sides:0 "Connections on all Sides"
+ TUR_military_authority:0 "Military Authority"
  TUR_unionist_minister:0 "Unionist Minister"
  TUR_pragmatic_reformist:0 "Pragmatic Reformist"
  TUR_pragmatic_reformist_leader:0 "Pragmatic Reformist"
  linchpin_of_infrastructure2:0 "Linchpin of Infrastructure"
- TUR_butcher_2:0 "Kasap Cemâl"
  TUR_kucuk_efendi:0 "Küçük Efendi"
  TUR_cautious_reformist:0 "Cautious Reformist"
  TUR_three_pasha_locked_tt:0 "§YA member of the Triumvirate cannot be manually replaced or removed.§!"
