--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2987,6 +2987,9 @@ we_are_number_one_Naval_treaty_nation:0 "We are the most powerful navy of all ad
  FRA_instrumentalized_senate_desc:0 "The French Senate has become nothing more than a puppet of the government since Napoleon's reforms following the Great War. Its members are elected by the government and its role is only to validate the constitutionality of the reforms."
 
  FRA_bons_du_tresor:0 "Bons du Trésor"
+ FRA_communist_terrorism:0 "Communist Terrorism"
+ FRA_communist_terrorism_desc:0 "Anarchist, trade unionist and communist elements organized against the state, regularly perpetuating sabotage, demonstrations and rallies against the government."
+ FRA_leader_can_be_killed_tt:0 "\n§Y[FRA.getLeader]§! may be the victim of a §Rterrorist attack§!."
 
  FRA_socialism_activism:0 "Socialist Activism"
  FRA_socialism_activism_desc:0 "Radical left-wing socialist, anarchist, trade unionist and communist elements organized against the state, regularly perpetuating sabotage, demonstrations and rallies against the government."
