--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14418,6 +14418,9 @@ ww1_morocco.26.f:0 "We should leave before we embarrass ourselves further..."
  ww1_armenia.3.b:0 "Did you say "Armenian"?"
  treaty_of_alexandropol:0 "Treaty of Alexandropol has been signed"
  treaty_of_alexandropol_failed:0 "Turkish Nationalists has rejected the Armenian sue for peace"
+ ww1_armenia.4.t:0 "Armenian [GetMonth] Uprising"
+ ww1_armenia.4.d:0 "In response to our guiding rule based on [ROOT.GetRulingIdeology], reactionaries in Armenia staged an uprising. The garrison troops crushed the uprising, but some of them fled to the mountains and declared an independent Armenian government called the Republic of Mountainous Armenia."
+ ww1_armenia.4.a:0 "Mountainous?"
 
  # MONACO
  ww1_monaco.1.t:0 "New Constitution"
