--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1885,6 +1885,11 @@
  ARM_andranik_neutrality:0 "Armenian Special Striking Division"
  ARM_andranik_neutrality_DEF:0 "the Armenian Special Striking Division"
 
+ ARM_mountainous_fascism:0 "Mountainous Armenia"
+ ARM_mountainous_fascism_DEF:0 "the Republic of Mountainous Armenia"
+ ARM_mountainous_neutrality:0 "Mountainous Armenia"
+ ARM_mountainous_neutrality_DEF:0 "the Republic of Mountainous Armenia"
+
  MOR_SPR_autonomy_tgwr_protectorate:0 "Spanish Morocco"
  MOR_SPR_autonomy_tgwr_protectoratee_DEF:0 "the Spanish Protectorate in Morocco"
  MOR_SPR_autonomy_tgwr_informal_protectorate:0 "Spanish Morocco"
