--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -10335,10 +10335,10 @@ AUH_handle_federalism:0 "If the reform pass, it will §Ycore all of the constitu
  ww1_auh.126.d:0 "The [FROM.getAdjective] officials refused our terms about giving independence to the Albanian territory."
  ww1_auh.126.a:0 "This could be their last mistake!"
 
- ww1_auh.127.t:0 "Karl I Wedding"
+ ww1_auh.127.t:0 "Emperor Karl's Wedding"
+ ww1_auh.127.t:0 "Archduke Karl's Wedding"
  ww1_auh.127.d:0 "Karl, has just married Zita de Bourbon-Parma, daughter of the Duke of Parma. The wedding took place in Austria in the presence of Franz Joseph who is very enthusiastic. Unlike Karl, Ferdinand asked for a morganic marriage which theoretically excluded him from the succession."
  ww1_auh.127.a:0 "May God bless us all!"
- ww1_auh.127.b:0 "May God bless us all!"
  AUH_ferdinand_is_very_happy:0 "is now Very Happy!"
 
  ww1_auh.128.t:0 "Karl I Coronation"
