in progress napoléon tree

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14455,3 +14455,26 @@ ww1_morocco.26.f:0 "We should leave before we embarrass ourselves further..."
  ww1_france.437.d:0 "This morning, the government organized a visit to the provinces, several ministers accompanied [FRA.getLeader] in the south of France, crossing Béziers, then Carcasonne to reach the regional capital Toulouse. But on the way, the official convoy was attacked by a group of revolutionary insurgents led by Jean Charles Fortuné Henry, a criminal activist wanted for his anarchist activism."
  ww1_france.437.a:0 "[FRA.getLeader] has been killed!"
  ww1_france.437.b:0 "[FRA.getLeader] survived..."
+
+ ww1_france.438.t:0 "A new Era for France"
+ ww1_france.438.d:0 "With the terrible assassination of Napoleon V orchestrated a few weeks earlier, the French empire was destabilized and the re-establishment of an emperor was the first priority to maintain the regime. If Victor Napoleon was a politically active emperor, his brother Louis Joseph was not as active. The nationalist wing of the coalition could take advantage of this to make him a symbolic figure, taking advantage of his disinterest in political affairs to gain autonomy."
+ ww1_france.438.a:0 "He must assume his reign"
+ ww1_france.438.b:0 "Lets take advantage of the situation!"
+
+ ww1_france.439.t:0 "A new Era for France"
+ ww1_france.439.d:0 "The emperor must choose which politician will be his prime minister. The Prime Minister will then compose his government freely with Louis' blessing. Several likely candidates are in the running, some more original than others, but all valid and nationalist."
+ ww1_france.439.a:0 "Jacques Piou is a consensual figure"
+ ww1_france.439.b:0 "Daudet saved France in the great war"
+ ww1_france.439.c:0 "Pujo is a die hard restorationist"
+ ww1_france.439.e:0 "Lets try Valois' national-syndicalist approach"
+
+
+FRA_emperor_will_appoint_a_prime_minister:0 "§YEmperor Louis Napoléon§! will appoint a §YPrime Minister§! in next days."
+
+ ww1_france.440.t:0 "Napoléon V Assassination"
+ ww1_france.440.d:0 "French Emperor Napoleon V was assassinated yesterday in a terrorist attack in the south of France. Around twenty anarchist partisans ambushed the imperial convoys, killing the emperor in the exchange of fire. The terrible news caused numerous clashes in France, especially since the Emperor had reigned for less than 3 years.\n\nThe rule of succession of the House of Bonaparte makes Louis Joseph Napoleon the next emperor, whose coronation will be carried out in the coming weeks at Paris Cathedral."
+ ww1_france.440.a:0 "A terrible news for France"
+
+ ww1_france.441.t:0 "French Annexation of Sarre"
+ ww1_france.441.d:0 "[FRA.getNameDefCap] ordered the annexation of the Saarland region, a small iron-rich and heavily industrialized German border territory. The government of [FRA.getLeader] justified its action by the need to compensate for Germany's inability to pay its immense reparations.\n\nThis plan is similar to that which the German Empire had fomented during the Kreuznach conference in 1917, that is to say to annex the French zone of Briey."
+ ww1_france.441.a:0 "France is sinking into the most radical imperialism..."
